fix: デザインの微調整と改善
## 主な変更内容

### profile.html
- 身長表記を修正: "178cm" → "178cm(耳のてっぺんまで)"

### achievements.html デザイン改善
- タイムラインの位置調整
  - 縦線を左寄りに配置（日付とコンテンツの中央に配置）
  - より自然な中央寄せレイアウトに
  - max-widthを900px→1000pxに拡大

- タグのデザイン変更
  - 四角枠を削除し、ライトなテキスト表示に
  - 「#information」「#music」形式に変更
  - 不透明度0.7で存在感を軽減
  - タグの位置を文章の最後に移動（order: 3）

- モバイルビューの改善
  - 点がラインの中央に正確に配置されるよう調整
  - margin-left: -8pxで中央揃え
  - 日付表示のorder: 0で最上部に配置

### faq.html
- メッセージの位置変更
  - 質問一覧の下部 → 上部に移動
  - 文言変更: "上記以外" → "こちらに記載のない"
  - 背景をより控えめに（opacity: 0.5）
  - padding調整: 2rem → 1.5rem

### スタイル詳細
- タグのテキスト表記: 小文字（music, information）
- タグの色: music（オレンジ）, information（グレー）
- アニメーション遅延は維持

--- a/profile.html
+++ b/profile.html
@@ -104,7 +104,7 @@
             </li>
             <li>
               <span class="profile-label">身長</span>
-              <span class="profile-value">178cm</span>
+              <span class="profile-value">178cm(耳のてっぺんまで)</span>
             </li>
             <li>
               <span class="profile-label">好きなもの</span>
