fix: プロフィールのソーシャルリンクとAchievementsのデザイン改善
【profile.html/css】
- ソーシャルリンクをindex.htmlと同様のカードデザインに変更
- 各リンクに枠・アイコン・名称を表示（例: YouTube, X, TikTok等）
- min-width: 80px、padding: 0.75rem 1rem で視認性を向上
- ホバー時に上昇＋シャドウエフェクト追加

【achievements.css】
- achievement-pointのz-indexを10に設定（ラインはz-index:1）
- PCビュー・SPビュー両方で、丸いポイントが縦線の上に重なるよう修正
- SPビューでもz-index: 10を明示的に指定

--- a/profile.html
+++ b/profile.html
@@ -201,18 +201,23 @@
         if (!container) return;
         
         const snsConfig = [
-          { key: 'youtube', icon: '▶' },
-          { key: 'x_main', icon: '𝕏' },
-          { key: 'x_sub', icon: '𝕏' },
-          { key: 'tiktok', icon: '♪' },
-          { key: 'marshmallow', icon: '📧' },
-          { key: 'booth', icon: '🛒' },
-          { key: 'wishlist', icon: '🎁' }
+          { key: 'youtube', name: 'YouTube', icon: '▶' },
+          { key: 'x_main', name: 'X (Main)', icon: '𝕏' },
+          { key: 'x_sub', name: 'X (Sub)', icon: '𝕏' },
+          { key: 'tiktok', name: 'TikTok', icon: '♪' },
+          { key: 'marshmallow', name: 'マシュマロ', icon: '📧' },
+          { key: 'booth', name: 'BOOTH', icon: '🛒' },
+          { key: 'wishlist', name: 'Wishlist', icon: '🎁' }
         ];
         
         container.innerHTML = snsConfig.map(sns => {
           if (linksData[sns.key]) {
-            return `<a href="${linksData[sns.key]}" target="_blank" rel="noopener noreferrer" class="profile-social-link" title="${sns.key}">${sns.icon}</a>`;
+            return `
+              <a href="${linksData[sns.key]}" target="_blank" rel="noopener noreferrer" class="profile-social-link">
+                <div class="profile-social-icon">${sns.icon}</div>
+                <div class="profile-social-name">${sns.name}</div>
+              </a>
+            `;
           }
           return '';
         }).join('');
