fix: profile要素削減 & achievements位置を正確に修正
【profile.html】
- ソーシャルリンクをYouTubeとXのみに削減
- X (Main)を「X」にリネーム

【achievements.css - 完全再設計】
PCビュー:
- 縦線位置: left: calc(140px + 2rem - 1px) で2pxラインの中心を正確に計算
- ポイント位置: left: calc(140px + 2rem - 9px) で縦線の中心に配置
  (16pxの円の半径8px + border 3pxを考慮し-9pxで調整)
- position: absolute で物理的に縦線の真上に配置

SPビュー:
- padding: 0; padding-left: 1.5rem; で左端基準に変更
- 縦線位置: left: calc(1.5rem - 1px)
- ポイント位置: left: calc(1.5rem - 9px) で縦線中心に配置
- コンテンツ: margin-left: 2rem で縦線から適切な間隔を確保
- 右寄りのズレを完全に解消

--- a/profile.html
+++ b/profile.html
@@ -202,12 +202,7 @@
         
         const snsConfig = [
           { key: 'youtube', name: 'YouTube', icon: '▶' },
-          { key: 'x_main', name: 'X (Main)', icon: '𝕏' },
-          { key: 'x_sub', name: 'X (Sub)', icon: '𝕏' },
-          { key: 'tiktok', name: 'TikTok', icon: '♪' },
-          { key: 'marshmallow', name: 'マシュマロ', icon: '📧' },
-          { key: 'booth', name: 'BOOTH', icon: '🛒' },
-          { key: 'wishlist', name: 'Wishlist', icon: '🎁' }
+          { key: 'x_main', name: 'X', icon: '𝕏' }
         ];
         
         container.innerHTML = snsConfig.map(sns => {
