feat(profile): プロフィール紹介文を追加
伊吹しろうの活動内容と魅力を詳しく紹介するテキストを追加:
- 配信スタイル（毎日朝～昼の雑談メイン）
- 特徴（途切れないトーク、落ち着いた声、歌の上手さ）
- コミュニティ方針（安心して過ごせる空間）
- 展開力（歌ってみた、グッズ、メンバーシップ）
- 目標（登録1万人、単独ライブ）
- ファンの声と配信への誘導

--- a/profile.html
+++ b/profile.html
@@ -88,6 +88,25 @@
             歌とトークで君を虜にするVTuber。<br>
             一瞬を楽しむだけじゃない、君の記憶に深く刻まれる存在へ。<br>
           </p>
+          <p style="font-family: var(--font-secondary); color: var(--color-text-secondary); margin-bottom: 1rem; line-height: 1.8;">
+            毎日朝から昼にかけて雑談メインで配信中！<br>
+            長時間なのに全く途切れない喋りで、みんなへ元気をお届け。<br>
+            落ち着いた声とトーク、歌の上手さも魅力。<br>
+            荒らしやマナー悪い奴は即粛清。みんなが安心して過ごせる空間を大事にしてます！<br>
+          </p>
+          <p style="font-family: var(--font-secondary); color: var(--color-text-secondary); margin-bottom: 1rem; line-height: 1.8;">
+            定期的な歌ってみたリリースやグッズ発表は企業並みの展開力。<br>
+            メンバーシップ限定の月末決算配信は赤裸々すぎて企業じゃできないレベル。<br>
+          </p>
+          <p style="font-family: var(--font-secondary); color: var(--color-text-secondary); margin-bottom: 1rem; line-height: 1.8;">
+            目標はチャンネル登録1万人、単独ライブ！<br>
+          </p>
+          <p style="font-family: var(--font-secondary); color: var(--color-text-secondary); margin-bottom: 1rem; line-height: 1.8;">
+            「気づいたら毎朝配信来てる」「伊吹しろうじゃないと物足りない」<br>
+          </p>
+          <p style="font-family: var(--font-secondary); color: var(--color-text-secondary); margin-bottom: 1rem; line-height: 1.8;">
+            本当にそうか確かめにきてね！配信で待ってるよ！<br>
+          </p>
           <!-- Social Links -->
           <div class="profile-social-links" id="profile-social-links">
             <!-- JSで動的に読み込み -->
