--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
       <div class="profile-info">
         <!-- 伊吹しろうセクション -->
         <div class="profile-section-group">
-          <h1 class="profile-name">伊吹しろう <span style="color: var(--color-text); font-size: 0.8em; font-weight: 400;">Ibuki Shirou</span></h1>
+          <h1 class="profile-name">伊吹しろう <span class="profile-name-en" style="color: var(--color-text); font-size: 0.8em; font-weight: 400;">Ibuki Shirou</span></h1>
           <p style="font-family: var(--font-secondary); color: var(--color-secondary); margin-bottom: 1rem; line-height: 1.8; font-weight: 700; font-size: 1.15rem;">
             歌とトークで君を虜にするVTuber。<br>
             一瞬を楽しむだけじゃない、君の記憶に深く刻まれる存在へ。<br>
