fix(responsive): iPhone SEでの表示崩れ対策
- ヘッダーロゴのフォントサイズをSPビューで調整(1.2rem -> 1rem)
- index.html: キャッチフレーズを3行に改行調整
- profile.html: SPビューで画像が最初から表示されるように修正
- guidelines.html: イントロテキストの改行調整
- faq.html: イントロテキストの改行調整と文言修正
- contact.html: 各テキストの改行調整とメールアドレスボタンのレスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <p class="catchphrase-subtitle">伊吹しろう / Ibuki Shirou</p>
     <p class="catchphrase-company">個人事務所ULRIC</p>
     <p class="catchphrase-description">配信・企画・グッズなど幅広く展開。</p>
-    <p class="catchphrase-text"><span class="catchphrase-line1">気づけば君の毎日に、</span><span class="catchphrase-line2">俺がいる。</span></p>
+    <p class="catchphrase-text"><span class="catchphrase-line1">気づけば君の</span><span class="catchphrase-line2">毎日に、</span><span class="catchphrase-line3">俺がいる。</span></p>
   </section>
 
   <!-- 代表作セクション -->
