feat: implement PWA support with Service Worker
## PWA実装
- Service Worker（sw.js）を追加
  - Network First with Cache Fallback戦略
  - 静的アセットのキャッシュ
  - 古いキャッシュの自動削除
  - オフライン対応

- Service Worker登録スクリプト（js/sw-register.js）を追加
  - 自動登録とアップデート検知
  - PWAインストールプロンプト対応
  - スタンドアロンモード検出

## アイコン追加
- 192x192pxアイコン（PWA対応）
- 512x512pxアイコン（PWA対応）
- マスカブルアイコンとして設定

## マニフェスト更新
- site.webmanifestにPWA用アイコンを追加
- scope、orientation、categoriesを追加
- theme_colorを#8B0000に変更（ブランドカラー）

## HTMLファイル更新
- 全HTMLページにPWAメタタグを追加
  - theme-color
  - mobile-web-app-capable
  - apple-mobile-web-app設定
- Service Worker登録スクリプトを全ページに追加

## 検索結果のアイコン表示対応
- 192x192、512x512のアイコンを追加し、Google検索結果でロゴが表示されるように改善

--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,13 @@
 <head>
 
   <!-- Favicon -->
+  <!-- PWA Meta Tags -->
+  <meta name="theme-color" content="#8B0000">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="伊吹しろう">
+  
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
@@ -188,5 +195,6 @@
       }
     }
   </style>
+  <script src="js/sw-register.js"></script>
 </body>
 </html>
