--- a/guidelines.html
+++ b/guidelines.html
@@ -3,6 +3,13 @@
 <head>
 
   <!-- Favicon -->
+  <!-- PWA Meta Tags -->
+  <meta name="theme-color" content="#8B0000">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="伊吹しろう">
+  
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
@@ -128,5 +135,6 @@
   <script src="js/main.js"></script>
   <script src="js/fetch-guidelines.js"></script>
   <script src="js/share.js"></script>
+  <script src="js/sw-register.js"></script>
 </body>
 </html>
