--- a/profile.html
+++ b/profile.html
@@ -166,7 +166,7 @@
             </li>
             <li>
               <span class="profile-label">嫌いなもの</span>
-              <span class="profile-value">虫</span>
+              <span class="profile-value">俺のことが嫌いな奴の一切 / ビーズ・砂利 / 虫</span>
             </li>
             <li>
               <span class="profile-label">活動内容</span>
@@ -174,7 +174,7 @@
             </li>
             <li>
               <span class="profile-label">得意ジャンル</span>
-              <span class="profile-value">RPG / アクション</span>
+              <span class="profile-value">ポケモン / アクション / TRPG・マダミス</span>
             </li>
             <li>
               <span class="profile-label">ファンマーク</span>
@@ -200,7 +200,7 @@
               <span class="profile-value">#しろうの画廊</span>
             </li>
             <li>
-              <span class="profile-label">汎用</span>
+              <span class="profile-label">なんでもOK</span>
               <span class="profile-value">#伊吹しろう</span>
             </li>
           </ul>
