feat(achievements): 実績ページのデザインを刷新
- データ構造をカテゴリベース（イベント、グッズ）に変更
- 年別・カテゴリ別の階層表示を実装
- フィルターボタンを削除し、シンプルな構造に
- カードレイアウトを3列グリッド表示（PC）に変更
- 各カードに日付、タイトル、説明、クライアント名を表示
- カードクリックで別タブでURLを開く機能を実装
- レスポンシブデザイン対応（SP: 1列表示）
- サイトカラー（深い赤・紅葉オレンジ）に統一したデザイン

--- a/achievements.html
+++ b/achievements.html
@@ -22,14 +22,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- SEO Meta Tags -->
-  <meta name="description" content="VTuber 伊吹しろうの実績・活動履歴を掲載しています。デビューから現在までの歩みをご覧いただけます。">
-  <meta name="keywords" content="伊吹しろう,実績,活動履歴,achievements,VTuber">
+  <meta name="description" content="VTuber 伊吹しろうの実績を掲載しています。これまでに参加したイベントやお仕事の実績をご覧いただけます。">
+  <meta name="keywords" content="伊吹しろう,実績,イベント,案件,achievements,VTuber">
   <link rel="canonical" href="https://ulric.jp/achievements.html">
   
   <!-- Open Graph Meta Tags -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Achievements - 伊吹しろう Official Website">
-  <meta property="og:description" content="VTuber 伊吹しろうの実績・活動履歴を掲載しています。">
+  <meta property="og:title" content="Achievement - 伊吹しろう Official Website">
+  <meta property="og:description" content="VTuber 伊吹しろうの実績。これまでに参加したイベントやお仕事の実績を掲載しています。">
   <meta property="og:url" content="https://ulric.jp/achievements.html">
   <meta property="og:image" content="https://ulric.jp/assets/img/ogp.webp">
   <meta property="og:site_name" content="伊吹しろう Official Website">
@@ -38,19 +38,19 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@ibukishirou">
-  <meta name="twitter:title" content="Achievements - 伊吹しろう Official Website">
-  <meta name="twitter:description" content="VTuber 伊吹しろうの実績・活動履歴を掲載しています。">
+  <meta name="twitter:title" content="Achievement - 伊吹しろう Official Website">
+  <meta name="twitter:description" content="VTuber 伊吹しろうの実績。これまでに参加したイベントやお仕事の実績を掲載しています。">
   <meta name="twitter:image" content="https://ulric.jp/assets/img/ogp.webp">
   
-  <title>Achievements - 伊吹しろう Official Website</title>
+  <title>Achievement - 伊吹しろう Official Website</title>
   
   <!-- Structured Data (JSON-LD) -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "CollectionPage",
-    "name": "Achievements - 伊吹しろう Official Website",
-    "description": "VTuber 伊吹しろうの実績・活動履歴",
+    "name": "Achievement - 伊吹しろう Official Website",
+    "description": "VTuber 伊吹しろうの実績。これまでに参加したイベントやお仕事の実績",
     "url": "https://ulric.jp/achievements.html"
   }
   </script>
@@ -70,18 +70,10 @@
 
   <!-- 実績セクション -->
   <section style="padding-top: 2rem;">
-    <h2 class="section-title">Achievements</h2>
-    
-    <!-- フィルターボタン -->
-    <div class="filter-buttons">
-      <button class="filter-btn active" data-filter="all">ALL</button>
-      <button class="filter-btn" data-filter="infomation">Information</button>
-      <button class="filter-btn" data-filter="music">Music</button>
-      <button class="filter-btn" data-filter="video">Video</button>
-    </div>
+    <h2 class="section-title">Achievement</h2>
     
     <!-- 実績リスト -->
-    <div class="achievements-list" id="achievements-container">
+    <div id="achievements-container">
       <!-- JSで動的に読み込み -->
     </div>
   </section>
