feat: 末尾スラッシュを除去してクリーンなURLに
JavaScriptで末尾スラッシュを自動除去する仕組みを実装

## 変更内容

### 新規ファイル
- js/remove-trailing-slash.js
  - URLの末尾に/がある場合、自動的に/なしにリダイレクト
  - window.history.replaceState()で履歴を汚さない
  - ルートパス(/)は除外

### HTML修正
- 全HTMLファイルの<head>にremove-trailing-slash.jsを追加
  - index.html
  - achievements/index.html
  - calendar/index.html
  - contact/index.html
  - faq/index.html
  - goods/index.html
  - guidelines/index.html
  - privacy/index.html
  - profile/index.html
  - terms/index.html

### JS修正
- js/breadcrumb.js
  - pageMapから末尾スラッシュ付きエントリを削除
  - currentPath取得時に末尾スラッシュを自動除去

## 動作
- アクセス: /guidelines/ → 自動的に /guidelines に変更
- アクセス: /profile/ → 自動的に /profile に変更
- ブラウザのURLバーも自動更新される

--- a/achievements/index.html
+++ b/achievements/index.html
@@ -63,6 +63,7 @@
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/achievements.css">
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ヘッダー -->
