--- a/contact/index.html
+++ b/contact/index.html
@@ -51,6 +51,7 @@
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ヘッダー -->
