--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
   
   <!-- Remix Icon -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet">
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ローディング画面 -->
