--- a/faq/index.html
+++ b/faq/index.html
@@ -60,6 +60,7 @@
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ヘッダー -->
