--- a/goods/index.html
+++ b/goods/index.html
@@ -66,6 +66,7 @@
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ヘッダー -->
