--- a/guidelines/index.html
+++ b/guidelines/index.html
@@ -94,6 +94,7 @@
       margin-bottom: 2.5rem;
     }
   </style>
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ヘッダー -->
