--- a/privacy/index.html
+++ b/privacy/index.html
@@ -36,6 +36,7 @@
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ヘッダー -->
