--- a/profile/index.html
+++ b/profile/index.html
@@ -76,6 +76,7 @@
   
   <!-- Remix Icon -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet">
+  <script src="/js/remove-trailing-slash.js"></script>
 </head>
 <body>
   <!-- ヘッダー -->
