feat: ローディングアニメーションをトップページのみに限定
## 変更内容

### calendar/index.html
- ローディング画面HTMLを削除
  - #loading-screen要素を完全削除
- loading.css読み込みを削除
- loading.js読み込みを削除

### index.html (トップページ)
- ローディング画面はそのまま維持
- パスをルート相対パスに修正
  - css/loading.css → /css/loading.css
  - assets/img/logo_wolf.webp → /assets/img/logo_wolf.webp
  - js/loading.js → /js/loading.js

## 動作
- トップページ(/)にアクセス時のみローディングアニメーション表示
- 他のページ(/profile, /calendar等)は即座に表示
- セッション内2回目以降の訪問時はローディングなし（既存動作維持）

## 影響範囲
- トップページ以外のUX改善（ローディング待ち時間削減）
- トップページの初回体験は維持

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/loading.css">
+  <link rel="stylesheet" href="/css/loading.css">
   
   <!-- Remix Icon -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet">
@@ -101,7 +101,7 @@
   <!-- ローディング画面 -->
   <div id="loading-screen">
     <div class="loading-content">
-      <img src="assets/img/logo_wolf.webp" alt="Loading..." class="loading-logo">
+      <img src="/assets/img/logo_wolf.webp" alt="Loading..." class="loading-logo">
       <p class="loading-text">
         <span class="loading-text-pc">伊吹しろう Official Websiteへようこそ</span>
         <span class="loading-text-sp">伊吹しろう<br>Official<br>Website<br>へようこそ</span>
@@ -173,7 +173,7 @@
 
   <!-- JavaScript -->
   <script src="js/components.js"></script>
-  <script src="js/loading.js"></script>
+  <script src="/js/loading.js"></script>
   <script src="js/main.js"></script>
   <script src="js/fetch-links.js"></script>
   <script>
