refactor: /company ページのデザインをシンプルに修正
- 事業内容セクションをシンプルなリスト形式に変更（絵文字削除）
- About/Message セクションを中央揃えに変更
- CTA セクションをシンプルなリンク形式に変更
- 「代表社員」→「代表取締役」に修正
- 文字のみのシックなデザインに統一

--- a/company/index.html
+++ b/company/index.html
@@ -85,29 +85,19 @@
       </p>
       <div class="business-grid">
         <div class="business-item">
-          <div class="business-icon">📺</div>
-          <h3>YouTubeチャンネル運営</h3>
-          <p>自社チャンネルの企画・運営を通じて、継続的なコンテンツ配信を実現</p>
+          <h3>自社YouTubeチャンネル運営</h3>
         </div>
         <div class="business-item">
-          <div class="business-icon">🎬</div>
-          <h3>動画コンテンツ制作</h3>
-          <p>企画立案から編集まで、質の高い動画制作をワンストップで提供</p>
+          <h3>動画コンテンツの企画・制作・編集</h3>
         </div>
         <div class="business-item">
-          <div class="business-icon">🎭</div>
-          <h3>バーチャルタレントIP運用</h3>
-          <p>キャラクター設計、世界観構築、ブランド管理を一貫して実施</p>
+          <h3>バーチャルタレントのIP運用</h3>
         </div>
         <div class="business-item">
-          <div class="business-icon">📢</div>
-          <h3>プロモーション・マーケティング</h3>
-          <p>SNS運用、広報活動、ファンコミュニティの育成支援</p>
+          <h3>プロモーションおよびマーケティング支援</h3>
         </div>
         <div class="business-item">
-          <div class="business-icon">🎁</div>
-          <h3>グッズ・イベント展開</h3>
-          <p>物販企画、リアルイベント参加など、多角的な価値提供</p>
+          <h3>グッズ展開およびイベント展開</h3>
         </div>
       </div>
       <p class="business-note">
@@ -134,7 +124,7 @@
           <td>2024年2月28日（予定）</td>
         </tr>
         <tr>
-          <th>代表社員</th>
+          <th>代表取締役</th>
           <td>渡邊 洋平</td>
         </tr>
         <tr>
@@ -168,7 +158,7 @@
         </p>
         <div class="message-signature">
           <p>合同会社ULRIC</p>
-          <p>代表社員　渡邊 洋平</p>
+          <p>代表取締役　渡邊 洋平</p>
         </div>
       </div>
     </div>
