refactor: Business セクションを段落形式に変更
- リスト形式を廃止し、段落形式（文字のみ）に変更
- 事業内容を読点区切りの文章形式で表示
- シンプルで読みやすいデザインに統一

--- a/company/index.html
+++ b/company/index.html
@@ -79,30 +79,18 @@
   <section class="company-section business-section">
     <div class="section-container">
       <h2 class="section-title">Business</h2>
-      <p class="business-subtitle">
-        広告収益を主軸としたコンテンツ配信事業<br>
-        IP（知的財産）運用事業
-      </p>
-      <div class="business-grid">
-        <div class="business-item">
-          <h3>自社YouTubeチャンネル運営</h3>
-        </div>
-        <div class="business-item">
-          <h3>動画コンテンツの企画・制作・編集</h3>
-        </div>
-        <div class="business-item">
-          <h3>バーチャルタレントのIP運用</h3>
-        </div>
-        <div class="business-item">
-          <h3>プロモーションおよびマーケティング支援</h3>
-        </div>
-        <div class="business-item">
-          <h3>グッズ展開およびイベント展開</h3>
-        </div>
+      <div class="business-content">
+        <p class="business-main">
+          広告収益を主軸としたコンテンツ配信事業<br>
+          IP（知的財産）運用事業
+        </p>
+        <p class="business-detail">
+          自社YouTubeチャンネル運営、動画コンテンツの企画・制作・編集、バーチャルタレントのIP運用、プロモーションおよびマーケティング支援、グッズ展開およびイベント展開
+        </p>
+        <p class="business-note">
+          主な収益：広告収益　|　主な対象：BtoC中心
+        </p>
       </div>
-      <p class="business-note">
-        主な収益：広告収益　|　主な対象：BtoC中心
-      </p>
     </div>
   </section>
 
