feature 実績の部分更新

--- a/company/index.html
+++ b/company/index.html
@@ -122,7 +122,7 @@
         </tr>
         <tr>
           <th>所在地</th>
-          <td class="address-cell">〒450-0002<br>愛知県名古屋市中村区名駅 4丁目24番5号<br>第2森ビル401</td>
+          <td><div class="address-cell">〒450-0002<br>愛知県名古屋市中村区名駅<br>4丁目24番5号第2森ビル401</div></td>
         </tr>
         <tr>
           <th>連絡先</th>
@@ -161,8 +161,13 @@
   <section class="company-section cta-section">
     <div class="section-container">
       <div class="cta-grid">
+        <a href="/" class="cta-card">
+          <h3>伊吹しろうHPへ</h3>
+          <p>伊吹しろうについてご覧いただけます</p>
+          <span class="cta-arrow">→</span>
+        </a>
         <a href="/achievements" class="cta-card">
-          <h3>実績を見る</h3>
+          <h3>活動実績</h3>
           <p>これまでの活動実績をご覧いただけます</p>
           <span class="cta-arrow">→</span>
         </a>
